# GoogleDeepMindHackathon

./: .gitignore  ppt_generation_prompt.txt
VOICE/: README.md  install_pkgs.py  pyproject.toml  requirements.txt
VOICE/app/: config.py  main.py
VOICE/app/models/: schemas.py
VOICE/app/routers/: evidence.py  offline.py  stt.py  translate.py  tts.py  ws_call.py
VOICE/app/services/: gemma_offline.py  live_session.py  stt.py  threat_classifier.py  translate.py  tts.py
VOICE/app/state/: call_state.py
VOICE/scratch/: test_endpoints.py  test_websocket.py
app/src/main/: AndroidManifest.xml
app/src/main/assets/: MODEL_PLACEHOLDER.md
app/src/main/java/com/androidblunders/rakshak/: MainActivity.kt  RakshakApplication.kt
app/src/main/java/com/androidblunders/rakshak/audio/: AudioStreamingManager.kt  CallTranscriber.kt
app/src/main/java/com/androidblunders/rakshak/call/: CallActivationOverlay.kt  CallStateMonitor.kt  CallStreamStatus.kt  PhoneCallReceiver.kt
app/src/main/java/com/androidblunders/rakshak/detection/: GemmaThreatAnalyzer.kt
app/src/main/java/com/androidblunders/rakshak/messaging/: MessageExtractor.kt  MessageNotificationListenerService.kt  SmsReceiver.kt
app/src/main/java/com/androidblunders/rakshak/presentation/: CallActivationNotice.kt  SecurityHistoryScreen.kt  SettingsScreen.kt
app/src/main/java/com/androidblunders/rakshak/reporting/: CyberPoliceReporter.kt  TransactionDetailsExtractor.kt
app/src/test/java/com/androidblunders/rakshak/: TransactionDetailsExtractorTest.kt
docs/architecture/: spam_detector.artifact.md
(+13 files in other folders)
